fixed the bottom margins so elements are not stuck together

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,13 @@
 /* GENERAL */
 
+.font-raleway {
+    font-family: Raleway;
+}
+
+#wrong-answer {
+    font-size: x-large;
+}
+
 /* FOOTER */
 
 #footer-bespoke {
